[package]
name = "wfir"
version = "0.1.0"
edition = "2021"
authors = ["wildanrfq <wildanrfqi@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/wfir"
repository = "https://github.com/danrfq/wfir"
description = "A Rust wrapper for <https://whichfaceisreal.com> 🎭 🦀"

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.16"